Asaas - melhorias diversas
